# doit-sandbox

./: .gitignore  README.md  dodo.py  pyproject.toml
.github/workflows/: doit.yml
src/doit_sandbox/: sample.py
test/: test_sample.py
