[tool.poetry]
name = "doit-sandbox"
version = "0.1.0"
description = "Playing around with doit"
authors = ["Sander Ploegsma <sanderploegsma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
isort = "^5.12.0"
black = "^23.9.1"
pytest = "^7.4.2"
doit = "^0.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
